--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,12 +12,21 @@ services:
     networks: 
       - node-network
     volumes: 
-      - ./node:/usr/src/app
+      - /usr/src/app
     tty: true    
-    ports: 
-      - "8080:3000"
+#    ports: 
+#      - "8080:3000"
     depends_on: 
        - db
+
+  nginx:
+    build: ./nginx
+    ports:
+    - '80:80'
+    depends_on:
+    - app
+    networks: 
+      - node-network
 
 
   db:
